# web-sentinel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  sentinel.toml
.github/workflows/: ci.yml  release.yml
.omc/autopilot/: spec.md
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
docs/: overview.md  performance-improvements.md  user-guide.md
scripts/: admin_panels.lua  backup_files.lua  cors_check.lua  cve_js_libs.lua  debug_endpoints.lua  deserialization.lua  env_file_check.lua  error_page_leak.lua  example_custom_check.lua  file_upload_bypass.lua  graphql_introspection.lua  host_header_injection.lua  htaccess_exposure.lua  idor_detection.lua  info_disclosure.lua  json_api_injection.lua  jsonp_callback.lua  jwt_vulnerabilities.lua  nosql_injection.lua  prototype_pollution.lua  robots_sitemap.lua  source_map.lua  ssrf_probe.lua  ssti_probe.lua  wp_config_backup.lua  xxe_injection.lua
src/: main.rs
src/browser/: controller.rs  mod.rs  xss.rs
src/core/: mod.rs  orchestrator.rs  scanner.rs
src/db/: cve.rs  mod.rs  state.rs
src/network/: analyzer.rs  crawler.rs  evasion.rs  fingerprint.rs  http.rs  mod.rs  port.rs  scope.rs
src/report/: dedup.rs  json.rs  mod.rs
src/scripting/: engine.rs
